# buzzma

./: .gitignore  docker-compose.yaml  docker-postgres-local.yaml
.claude/: agent-config.json  settings.json
.claude/commands/: issue-agent.md
.gitea/workflows/: build-test-publish.yml  check-source-branch.yaml  ci-backend.yml  ci-communications.yml  ci-configurator.yml  ci-frontend.yml  ci-notification.yml  ci-score.yml  ci.yml
backend/: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  GUIDELINES.md  README.md  build.gradle  docker-compose.yml
communications/: .env.example  Dockerfile  build.gradle  docker-compose.yml  settings.gradle
configurator/: .env.example  .gitignore  CLAUDE.md  Dockerfile  build.gradle  docker-compose.yml  settings.gradle
docs/: campaign-step-config.md
frontend/: .gitignore  CLAUDE.md  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  worker.js  wrangler.jsonc
frontend/dev-dist/: sw.js  workbox-809b47d2.js
frontend/public/: _redirects
frontend/src/: App.tsx  index.css  (+2 more)
notifications/: Dockerfile  build.gradle  docker-compose.yml  settings.gradle
score/: Dockerfile  README.md  pyproject.toml
score/app/: main.py
score/app/api/routes/: score.py
score/app/calculator/: overall_scoring.py  scoring_algorithm.py  similarity_scoring.py
score/app/core/: config.py
score/app/schemas/: __init__.py  label_score.py  score_payload_item.py  score_request_dto.py  score_response_dto.py
score/app/utils/: dataframe.py
score/tests/: test_calculators.py  test_score.py
(+1095 files in other folders)
